assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat&display=swap');

/*--- Global variables ---*/

body,
html {
    padding: 0;
    margin: 0;
    height: 100%;
    width: 100%;
    font-family: 'Fredoka One', cursive;
    background-color: #424242;
}

p {
    font-family: 'Montserrat', sans-serif;
}

header,
section,
footer {
    margin: 1.2rem;
}

header {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.vertical-align-center {
    display: flex;
    align-items: center;
}

.horizontal-align-center {
    display: flex;
    justify-content: center;
}

/* ----- LANDING PAGE Format -----*/

.lp-navigation-menu {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    margin: 0;
}

#lp-title {
    margin: 3rem 0;       
}

#lp-title h1 {
    margin: 0;
    padding: 1.5rem;
    border: solid 3px #f57f17;
    border-radius: 10px;
    box-shadow: 5px 5px #ffb04c;
    color: #f57f17;
    text-align: center;
}

.lp-text {
    text-align: center;
    font-family: 'Montserrat', sans-serif;
}

.lp-text h2 {
    color:#ffffff;
    letter-spacing: 0.2rem;
    line-height: 2rem; 
    margin-bottom: 1.5rem;
    margin-top: 1.5rem;
}

.lp-text i {
    color:#f57f17;
    font-size: 3rem;
    margin: 10px;
}

.lp-text h3 {
    margin-top: 5rem;    
    font-size: 1.5rem;
    font-family: 'Fredoka One', cursive;
}

.lp-text a {
    text-decoration: none;
    color: #f57f17;
    padding: 1.2rem;
    border: solid 3px #f57f17;
    border-radius: 10px;
    box-shadow: 5px 5px #ffb04c;
}

#lp-footer {
    margin:1rem;
    padding:1.5rem;
}

#lp-footer p{
    font-family: 'Montserrat', sans-serif;
    color: #e0e0e0;
    font-size: 0.5rem;
    text-align: center;
}


/* ----- HEADER Format -----*/

/*header {
    margin: 2rem;
}*/

.row {
    margin: 0;
    flex-wrap: nowrap;
}

#lp-title .nav-title {
    text-decoration: none;
    color: #f57f17;
    font-size: 2rem;

    margin: 0;
    padding: 10px;
    border: solid 3px #f57f17;
    border-radius: 10px;
    box-shadow: 5px 5px #ffb04c;
}



/* ---- GAME SECTION ----- */

.game-section {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    margin: 0;
    /*border: solid 3px #ffffff;*/
    border-radius: 10px;
    box-shadow: 5px 5px #6d6d6d;
    background-color: #e0e0e0 ;
    text-align: center;
    max-height: max-content;
}

.comp-title h1 {
    padding: 10px;
    color:#f57f17;
    font-size: 4em;
}

/* ---------- Comparisation section ---------- */

.comp-section {
    display: flex;
    flex-direction: row;
    flex-wrap:nowrap;
    justify-content: space-evenly;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
    height: auto;
}

.comp-item-1 {
    display: flex;
    flex-direction: column;
    align-items: center; 
    justify-content: center;   
    
    width: max-content;
    padding: 0;
}

.comp-item-2 {
    display: flex;
    flex-direction: column;
    align-items: center; 
    justify-content: center;
    width: max-content;
    padding: 0;
}

.comp-title {
    
    text-align: center;
}

/* .comp-image {
    margin: 0;
    border: solid 3px #ffffff;
    border-radius: 50%;
    width: 35%;
}*/

img {
    max-width: 100%;
    height: auto;
    opacity: 0.9;
  }

  .info-panel {
    margin: 30px;
    /*border: solid 3px #ffffff;*/
    border-radius: 10px;
    background-color: #bdbdbd;
}

.btn-img-container {
    position: relative;
    max-width: 100%;
    height: auto;
  }

.btn-container {
    position: absolute;
    display: flex;
    flex-direction: row;
    bottom: 10px;
    right:10px;
    padding: 1.2rem;
    background-color: rgb(255, 255, 255, 0.75);
    border-radius: .5rem;
    max-height: 15%;
    max-width: 20%;
}

.grow {
    transition: all .2s ease-in-out;
}

.btn-container .btn {
    max-width: 50%;
    max-height: 50%;
}


.btn-img-container .btn-up {
    color: #76d275;
    background-color: #00701a;
  }

.btn-img-container .btn-down {
    color: #ff6f60;
    background-color: #ab000d;
  }

.btn-format {
    font-size: 24px;
    margin: 0.1rem;
    border: none;

}

/* ---------- Score Panel ---------- */

.score-panel {
    margin: 0;
    padding: 1.5rem;
    /*border: solid 3px #bc5100;*/
    border-radius: 0 0 10px 10px;
    background-color: #bf360c;
    color: #ffffff;
    font-family: 'Montserrat', sans-serif; 
}

.score-panel p {
    font-size: 1.5rem;
    padding: 0;
    margin-top: 10px;
}

.correctAnswer span {
    color: #64dd17;
}

.wrongAnswer span {
    color: #ff6434;
}


/* ----------- Trend Panel ----------- */

.trend-section {
    margin: 0;
    /*border: solid 3px #ffffff;*/
    border-radius: 10px;
    box-shadow: 5px 5px #6d6d6d;
    background-color: #e0e0e0 ;
    text-align: center;
}

iframe {
    width: 80%;
}

iframe element.style {
    height: 80%;
    border-radius: 10px;
}

/* ---------- NAVBAR ---------- */

.navbar {
    padding: 1rem;
    border-radius: 10px;
    box-shadow: 5px 5px #6d6d6d;
    background-color: #e0e0e0;
    width: 100%;
}

.navbar p {
    padding: 0.8rem;
    margin: 0 1rem 0 0;
    border: solid 3px #f57f17;
    border-radius: 10px;
    box-shadow: 5px 5px #ffb04c;
    font-family: 'Fredoka One', cursive;
    color: #f57f17;
}

.navbar-toggler {
    border-radius: 10px;
    border: 1.5px solid #f57f17;
}

.navbar-nav .nav-link {
    text-align: center;
}

.nav-item {
    margin: 0 1rem 0 0;
}

.nav-link.active {
    background-color: #ffb04c;
    border-radius: 10px;
    opacity: 0.8;
    color: transparent;
}

/* ----- HOVER -----*/


.lp-text a:hover {
    background-color: #ffb04c;
    color: #424242;
    border: solid 3px #424242;
    box-shadow: 5px 5px #bc5100;
}

.nav-item:hover {
    background-color: #ffb04c;
    border-radius: 10px;
    opacity: 0.8;
    color: transparent;
}

.btn-img-container .btn-up:hover {
    color: #00701a;
    background-color: #76d275;
  }

.btn-img-container .btn-down:hover {
    color: #ab000d;
    background-color:#ff6f60;
  }

.grow:hover {
    transform: scale(1.1);
}


/* ---------- MEDIA QUERIES ----------*/

@media screen and (max-width: 1004px) {
    .navigation-menu {
        flex-direction: column;
    }

    .comp-item {
        flex-direction: column;
    };
}

/*@media screen and (min-width: 641px) {
    #navbar-hamburger {
        display: none;
    };
}

@media screen and (max-width: 640px) {
    .nav-menu {
        display: none;
    };
}*/

